2025-06-22T01:01:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15801361992 # 682
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-22
* notice: last 14d: unq all: 1 4
* notice: prev accum: outdated-unq outdated-all / unq all: 853 1331 / 857 1335
* notice: next accum: outdated-unq outdated-all / unq all: 854 1332 / 858 1336
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-07] / [2025-06-21]

2025-06-21T00:54:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15790358384 # 681
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-21
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 852 1330 / 856 1334
* notice: next accum: outdated-unq outdated-all / unq all: 853 1331 / 857 1335
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-06] / [2025-06-20]

2025-06-20T00:55:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15768832497 # 680
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-20
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 852 1330 / 855 1333
* notice: next accum: outdated-unq outdated-all / unq all: 852 1330 / 856 1334
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-19]

2025-06-19T00:55:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15746831294 # 679